# aoc

./: .clang-format  .gitignore  CMakeLists.txt  download_input.py
2025/day-01/: main.cpp
2025/day-02/: main.cpp
2025/day-03/: main.cpp
2025/day-04/: main.cpp
2025/day-05/: main.cpp
2025/day-06/: main.cpp
2025/day-07/: main.cpp
2025/day-08/: main.cpp
2025/day-09/: main.cpp
common/: io.hpp  job_queue.hpp  run.hpp  string.hpp  util.hpp
